fix products carousel title should be visible in mobile view

--- a/resources/assets/sass/_media.scss
+++ b/resources/assets/sass/_media.scss
@@ -68,3 +68,8 @@ body.rtl header .vc-small-screen #search-form {
     }
 
 }
+@media only screen and (max-width: 600px){
+    .selective-div {
+        width: 110px;
+    }
+}
