--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -849,7 +849,36 @@ section.product-footer {
     &.gray {
         background: $blue-gray;
     }
+    .category-header-vertical {
+        display: flex;
+        align-items: baseline;
+        justify-content: space-between;
+        padding: 0.375rem 0.75rem;
+        color: #fff;
 
+        .category-title {
+            flex-shrink: 0;
+            padding-left: 5px;
+        }
+
+        .category-line{
+            border-bottom: 2px dotted #fff;
+            width: 100%;
+        }
+
+        .category-link {
+            flex-shrink: 0;
+            padding-right: 5px;
+
+            a{
+                font-size: 0.75rem;
+                border: 0;
+                padding: 0;
+                color: #fff;
+            }
+        }
+
+    }
     .category-header {
         display: flex;
         flex-direction: column;
@@ -918,6 +947,7 @@ section.product-footer {
                     aspect-ratio: 195/268;
                     transform: scale(0.98);
                     transition: transform 250ms ease-in-out;
+                    max-width: 210px;
 
                     &:hover {
                         box-shadow: 0 0 11px;
